# jsonselect

./: .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  README  README.md  TODO  run_conformance_tests.py  setup.cfg  setup.py  test_conformance.py
conformance_tests/custom/: basic.json  basic_contains.output  basic_contains.selector  basic_empty.output  basic_nth-last-child.output  basic_nth-last-child.selector
jsonselect/: __init__.py  __main__.py  jsonselect.py  jsonselect2.py
tests/: __init__.py  test_conformance.py  test_jsonselect.py  test_productions.py
