[metadata]
name = jsonselect
version = 0.1
requires-python = >=2.6
author = Matthew Hooker
author_email = mwhooker@gmail.com
summary = Python implementation of jsonselect (http://jsonselect.org/)
description-file = README
license = ISC
keywords = json
home_page = https://github.com/mwhooker/jsonselect
classifier = License :: OSI Approved :: ISC License (ISCL)
    Development Status :: 2 - Pre-Alpha

[files]

packages = jsonselect
